# pdfTools

./: .gitignore  README.MD  pdfMerge.py  pdfRotate.py  pdfSplit.py  pdfTools.py  pyproject.toml
pdf_tools/: delete.py  extract.py  main.py  merge.py  rotate.py  substitute.py  utils.py
tools/: delete.py  extract.py  merge.py  rotate.py  substitute.py  utils.py
